# Solar_test

./: .gitignore  pyproject.toml  readme.md
data/: horizon_profile.json  results.csv  results_1d.csv  results_3d.csv  results_comparison.csv  results_dynamic.csv  sample_measures.json
src/: SolarModel.py  names.py  projection.py  solar_model.py  solver.py  utils.py  values.py  vision.py
src/constants/: values.py
test/: 01_test_vision.ipynb  02_test_model.ipynb  02_test_model_3d.ipynb
