[tool.poetry]
name = "solar-research"
version = "0.1.0"
description = "Environnement local de R&D pour le modèle de Perez et l'IA MiDaS"
authors =["Abderrahman <Abderrahman.yousfi@coenergy.com>"]
package-mode = false
[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "1.26.4"
opencv-python-headless = "4.9.0.80"
pillow = "^10.2.0"
scipy = "^1.12.0"
pandas = "^2.2.1"
timm = "^0.9.16"
numba = "^0.59.0"
parse = "^1.20.1"

# Outils de Data Science & Notebooks
jupyterlab = "^4.1.0"
ipykernel = "^6.29.0"
matplotlib = "^3.8.3"
tqdm = "^4.66.2"

# IA (Forcé sur CPU)
torch = {version = "^2.2.0", source = "pytorch-cpu"}
torchvision = {version = "^0.17.0", source = "pytorch-cpu"}

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "oie-lab"
url = "https://pip.oie-lab.net/python/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"